Reduce width of question description container to prevent overflow

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -53,7 +53,7 @@ input.input-block-level {
 
 	.description {
 		margin-left: 20%;
-		width: 80%;
+		width: 75%;
 		padding: 2%;
 	}
 }
